objects/ssot__RentalCarEmissionsFactor__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmissionFactorDataSourceName__c</fullName>
        <label>Emissions Factor Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmissionFactorUpdateYear__c</fullName>
        <label>Emissions Factor Update Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalIdentifier__c</fullName>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FuelEfficiencyNumber__c</fullName>
        <label>Fuel Efficiency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelEfficiencyUnit__c</fullName>
        <label>Fuel Efficiency Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Rental Car Emissions Factor Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OtherEmssnFctrId__c</fullName>
        <label>Other Emissions Factors</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShouldLockDtastUpdtForRec__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Dataset Update For Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383590503_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RentalCarEmissionsFactor_OtherEmssnF_rel</label>
        <referenceTo>ssot__OtherEmissionsFactorSet__dlm</referenceTo>
        <relationshipLabel>RentalCarEmissionsFactor_OtherEmssnF_rel</relationshipLabel>
        <relationshipName>rel_1747383590503_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>